@@ -4,24 +4,24 @@
   <parent>
     <groupId>org.zanata</groupId>
     <artifactId>server</artifactId>
-    <version>4.3.0-SNAPSHOT</version>
+    <version>4.5.0-SNAPSHOT</version>
   </parent>
   <artifactId>functional-test</artifactId>
   <!--if we want to use pom packaging, we need to explicitly enable some plugins and various things-->
   <!--<packaging>pom</packaging>-->
-  <packaging>takari-jar</packaging>
+  <packaging>jar</packaging>
   <name>functional-test</name>
 
   <properties>
     <allow.deploy.skip>true</allow.deploy.skip>
-    <selenium.version>3.4.0</selenium.version>
+    <selenium.version>3.8.1</selenium.version>
 
     <!--Cargo Settings -->
     <cargo.host>localhost</cargo.host>
     <!--jboss port offset -->
     <cargo.port.offset>0</cargo.port.offset>
     <!-- This may be changed by the JBOSS_HTTP_PORT profile -->
-    <!-- This needs to agree with the http socket-binding in standalone.xml -->
+    <!-- This needs to agree with the http socket-binding in standalone*.xml -->
     <cargo.servlet.port>8180</cargo.servlet.port>
     <cargo.jboss.management-http.port>10090</cargo.jboss.management-http.port>
     <cargo.jboss.management-native.port>10099</cargo.jboss.management-native.port>
@@ -71,10 +71,8 @@
     <webdriver.screenshot.dir>${project.build.directory}/screenshots</webdriver.screenshot.dir>
     <webdriver.wait>20</webdriver.wait>
     <googleopenid.credentials>zanata.user.1:</googleopenid.credentials>
-    <!-- on jenkins, this needs to be set to empty - so that cargo can shutdown. see http://stackoverflow.com/questions/1096642/tomcat-failed-to-shutdown -->
     <cargo.debug.jvm.args>
-      -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8787
-      -Xnoagent -Djava.compiler=NONE
+      -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=0
     </cargo.debug.jvm.args>
     <!-- this property can be used to control what test needs to be run by failsafe -->
     <default.test.patterns>**/BasicAcceptanceTestSuite.java</default.test.patterns>
@@ -206,8 +204,8 @@
 
     <dependency>
       <groupId>net.lightbody.bmp</groupId>
-      <artifactId>browsermob-core-littleproxy</artifactId>
-      <version>2.1.0-beta-4</version>
+      <artifactId>browsermob-core</artifactId>
+      <version>2.1.5</version>
       <exclusions>
         <exclusion>
           <groupId>com.google.code.findbugs</groupId>
@@ -239,12 +237,12 @@
     <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcpkix-jdk15on</artifactId>
-      <version>1.53</version>
+      <version>1.58</version>
     </dependency>
     <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcprov-jdk15on</artifactId>
-      <version>1.53</version>
+      <version>1.58</version>
     </dependency>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
@@ -300,9 +298,10 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
     </dependency>
+
     <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
     </dependency>
 
     <dependency>
@@ -352,7 +351,7 @@
 
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-stdlib</artifactId>
+      <artifactId>kotlin-stdlib-jre8</artifactId>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
@@ -753,14 +752,7 @@
                 <configuration>
                   <configuration>
                     <properties>
-                      <cargo.jvmargs>
-                        <!-- NB: JDom parser doesn't like comments starting with '-' -->
-                        -XX:-OmitStackTraceInFastThrow
-                        -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=target
-                        -XX:PermSize=512m -XX:MaxPermSize=1024
-                        -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled
-                        ${cargo.debug.jvm.args}
-                      </cargo.jvmargs>
+                      <cargo.jvmargs>${server.jvmargs}</cargo.jvmargs>
                     </properties>
                   </configuration>
                 </configuration>
@@ -770,14 +762,7 @@
                 <configuration>
                   <configuration>
                     <properties>
-                      <cargo.jvmargs>
-                        <!-- NB: JDom parser doesn't like comments starting with '-' -->
-                        -XX:-OmitStackTraceInFastThrow
-                        -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=target
-                        -XX:PermSize=512m -XX:MaxPermSize=1024
-                        -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled
-                        ${cargo.debug.jvm.args}
-                      </cargo.jvmargs>
+                      <cargo.jvmargs>${server.jvmargs}</cargo.jvmargs>
                     </properties>
                   </configuration>
                 </configuration>
@@ -912,35 +897,29 @@
         <directory>src/test/resources/zanata-user-config</directory>
         <filtering>true</filtering>
       </testResource>
+      <!-- config files under sample-projects, with filtering -->
+      <testResource>
+        <directory>sample-projects</directory>
+        <targetPath>sample-projects</targetPath>
+        <filtering>true</filtering>
+        <includes>
+          <include>**/zanata.xml</include>
+          <include>**/pom.xml</include>
+        </includes>
+      </testResource>
+      <!-- non-config files under sample-projects, without filtering -->
+      <testResource>
+        <directory>sample-projects</directory>
+        <targetPath>sample-projects</targetPath>
+        <filtering>false</filtering>
+        <excludes>
+          <exclude>**/zanata.xml</exclude>
+          <exclude>**/pom.xml</exclude>
+        </excludes>
+      </testResource>
     </testResources>
 
     <plugins>
-      <plugin>
-        <artifactId>maven-resources-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>default</id>
-            <phase>process-test-resources</phase>
-            <goals>
-              <goal>copy-resources</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <outputDirectory>target/test-classes/</outputDirectory>
-          <resources>
-            <!-- files under sample-projects, with filtering for config files -->
-            <resource>
-              <directory>sample-projects</directory>
-              <targetPath>sample-projects</targetPath>
-              <filtering>true</filtering>
-              <includes>
-                <include>**</include>
-              </includes>
-            </resource>
-          </resources>
-        </configuration>
-      </plugin>
       <plugin>
         <groupId>org.codehaus.gmaven</groupId>
         <artifactId>gmaven-plugin</artifactId>
@@ -1019,11 +998,11 @@
                 <echo />
                 <echo>Unless skipping tests, you must choose an appserver:</echo>
                 <echo>-Dappserver=jbosseap6 or -Dappserver=wildfly8</echo>
-                <echo>For jbosseap6, env var EAP7_URL should point to an EAP zip file.</echo>
+                <echo>For jbosseap6, env var EAP71_URL should point to an EAP zip file.</echo>
                 <echo />
                 <echo>-DallFuncTests to enable all functional tests (defaults to smoke tests)</echo>
                 <echo />
-                <echo>-Dcargo.debug.jvm.args : If not set by default will listen to port 8787. Need to set to empty on jenkins</echo>
+                <echo>-Dcargo.debug.jvm.args : If not set by default will listen to a random port.</echo>
                 <echo />
                 <echo>-Dzanata.target.version=version of zanata to deploy. Default is: ${project.parent.version}</echo>
                 <echo>-Dzanata.instance.url=http://${cargo.host}:${cargo.servlet.port}/${context.path}</echo>
@@ -1049,7 +1028,7 @@
             <configuration>
               <target unless="skipFuncTests">
                 <fail message="'appserver' property must be set to run integration tests (or else use -DskipFuncTests)" unless="appserver" />
-                <fail message="'cargo.installation' property is null (set env var EAP7_URL or else use -DskipFuncTests)" unless="cargo.installation" />
+                <fail message="'cargo.installation' property is null (set env var EAP71_URL or else use -DskipFuncTests)" unless="cargo.installation" />
               </target>
             </configuration>
           </execution>
@@ -1137,7 +1116,7 @@
             </files>
 
             <properties>
-              <cargo.jboss.configuration>standalone-full</cargo.jboss.configuration>
+              <cargo.jboss.configuration>standalone-full-ha</cargo.jboss.configuration>
               <cargo.port.offset>${cargo.port.offset}</cargo.port.offset>
               <cargo.jboss.ajp.port>8109</cargo.jboss.ajp.port>
               <!-- These properties will be interpolated by Cargo into the configfiles above -->
